TG-1697 adapt deprecations to new APIs